# huawei-pdf-reader

./: .gitignore  README.md  build_android.py  buildozer.spec  pyproject.toml  requirements.txt
.github/workflows/: android-build.yml
src/huawei_pdf_reader/: __init__.py  annotation_engine.py  app.py  backup_service.py  chinese_converter.py  database.py  document_processor.py  file_manager.py  magnifier.py  main.py  models.py  palm_rejection.py  plugin_manager.py  translation_service.py
src/huawei_pdf_reader/ui/: __init__.py  annotation_tools.py  file_manager_view.py  magnifier_widget.py  main_window.py  reader_view.py  settings_view.py  theme.py
tests/: __init__.py  conftest.py
tests/property/: __init__.py  test_annotation_properties.py  test_backup_properties.py  test_chinese_converter_properties.py  test_config_properties.py  test_document_properties.py  test_file_manager_properties.py  test_page_operations_properties.py  test_palm_rejection_properties.py  test_plugin_properties.py
